meta/seo update

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,30 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="COCOMO free online calculator" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+
+    <!-- Primary Meta Tags -->
+    <title>COCOMO Calculator</title>
+    <meta name="title" content="COCOMO Calculator" />
+    <meta name="description" content="Free online COCOMO calculator" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cocomo.now.sh/" />
+    <meta property="og:title" content="COCOMO Calculator" />
+    <meta property="og:description" content="Free online COCOMO calculator" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://cocomo.now.sh/" />
+    <meta property="twitter:title" content="COCOMO Calculator" />
+    <meta
+      property="twitter:description"
+      content="Free online COCOMO calculator"
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
