fix preview image

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <meta property="og:url" content="https://cocomo.now.sh/" />
     <meta property="og:title" content="COCOMO Calculator" />
     <meta property="og:description" content="Free online COCOMO calculator" />
-    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:image" content="https://cocomo.now.sh/preview.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,7 +47,7 @@
       property="twitter:description"
       content="Free online COCOMO calculator"
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="twitter:image" content="https://cocomo.now.sh/preview.png />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
