--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       property="twitter:description"
       content="Free online COCOMO calculator"
     />
-    <meta property="twitter:image" content="https://cocomo.now.sh/preview.png />
+    <meta property="twitter:image" content="https://cocomo.now.sh/preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
